--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "1.1.0",
   "author": "Philipp Kühn",
   "license": "MIT",
-  "homepage": "https://github.com/ueberdosis/vue-mailchimp-subscribe#readme",
+  "homepage": "https://github.com/deynega/vue-mailchimp-subscribe#readme",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ueberdosis/vue-mailchimp-subscribe.git"
+    "url": "git+https://github.com/deynega/vue-mailchimp-subscribe.git"
   },
   "bugs": {
-    "url": "https://github.com/ueberdosis/vue-mailchimp-subscribe/issues"
+    "url": "https://github.com/deynega/vue-mailchimp-subscribe/issues"
   },
   "keywords": [
     "vue",
@@ -21,8 +21,8 @@
   ],
   "source": "src/vue-mailchimp-subscribe.js",
   "main": "dist/vue-mailchimp-subscribe.js",
-  "module": "dist/vue-mailchimp-subscribe.mjs",
-  "unpkg": "dist/vue-mailchimp-subscribe.umd.js",
+  "module": "dist/vue-mailchimp-subscribe.js",
+  "unpkg": "dist/vue-mailchimp-subscribe.js",
   "scripts": {
     "build": "microbundle",
     "start": "microbundle watch",
